# loom

./: .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  Cargo.toml  README-zh.md  README.md  design.md  lean-toolchain  rust-toolchain.toml
contrib/duckdb-ext/: .gitignore  CMakeLists.txt  loom_extension.cpp
contrib/interp/: Cargo.toml
contrib/interp/src/: l2_kernel_registry.rs  lib.rs
contrib/loom-cli/: Cargo.toml
contrib/loom-cli/src/: main.rs
contrib/loom-container/: Cargo.toml
contrib/loom-container/src/: artifact_verifier.rs  container_codec.rs  descriptor.rs  layout_codec.rs  lib.rs  table_codec.rs  verified_lineage.rs  verifier.rs
crates/loom-cli/: Cargo.toml
crates/loom-cli/src/: main.rs
crates/loom-common/: Cargo.toml
crates/loom-common/src/: arrow_semantic_verifier.rs  artifact_types.rs  kloom_harness.rs  l1_model.rs  lib.rs  native_arrow_semantic.rs  native_lowering.rs  runtime_abi.rs
crates/loom-container/: Cargo.toml
crates/loom-container/src/: alp_params.rs  artifact_verifier.rs  container_codec.rs  descriptor.rs  l1_model.rs  l2_kernel_registry.rs  layout_codec.rs  lib.rs  native_arrow_semantic.rs  production_native_lowering.rs  table_codec.rs  verified_lineage.rs  verifier.rs
crates/loom-core/: Cargo.toml
crates/loom-core/src/: alp_params.rs  arrow_buffer_lowering.rs  arrow_builder_output.rs  arrow_semantic.rs  arrow_semantic_codec.rs  artifact_verifier.rs  container_codec.rs  decode_dialect.rs  descriptor.rs  error.rs  fsst_params.rs  full_verifier.rs  kloom_harness.rs  l1_model.rs  l2_core.rs  l2_core_reference_executor.rs  l2_kernel_registry.rs  l2core_codec.rs  layout_codec.rs  lib.rs  native_arrow_semantic.rs  native_lowering.rs  production_native_lowering.rs  runtime_abi.rs  solver.rs  table_codec.rs  verified_lineage.rs  verifier.rs
crates/loom-core/tests/: arrow_buffer_lowering.rs  arrow_semantic.rs  artifact_solver_discharge.rs  artifact_verifier.rs  decode_dialect.rs  full_verifier.rs  kloom_skip_semantics.rs  l2_core_interpreter_consistency.rs  l2_core_model.rs  l2_core_reference_executor.rs  native_arrow_semantic.rs  native_arrow_semantic_codegen.rs  native_arrow_semantic_codegen_adversarial.rs  native_arrow_semantic_codegen_stability.rs  native_lowering.rs  production_native_kernels.rs  production_native_lowering.rs  runtime_abi_contract.rs  runtime_cache_key.rs  runtime_execution_policy.rs  runtime_scan_planning.rs  safety_contract.rs  smtlib_emitter.rs  solver_contract.rs  verified_lineage.rs
crates/loom-dual-query-surface/: Cargo.toml
crates/loom-dual-query-surface/src/: duckdb_evidence.rs  fixture_bundle.rs  lib.rs  query_surface.rs
crates/loom-dual-query-surface/tests/: dependency_boundary.rs  duckdb_evidence.rs  query_surface_contract.rs  query_surface_negative.rs  starrocks_runtime_contract.rs
crates/loom-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/loom-ffi/examples/: make_fixture.rs
crates/loom-ffi/include/: loom.h  loom_duckdb_internal.h  loom_runtime.h
crates/loom-ffi/src/: arrow_buffer_lowering.rs  arrow_semantic.rs  arrow_semantic_codec.rs  artifact_types.rs  backend.rs  builder.rs  decode_dialect.rs  duckdb_runtime.rs  ffi.rs  fsst_params.rs  jit.rs  lib.rs  pipeline.rs  production_native_lowering.rs  toolchain.rs  verify_layout_types.rs
crates/loom-ffi/tests/: buffer_layout.rs  builder.rs  corpus_matrix.rs  decode_dialect_manifest.rs  decode_ir_gen_tier1.rs  duckdb_runtime.rs  duckdb_runtime_cache.rs  duckdb_runtime_ffi.rs  e2e_decode_pipeline.rs  ffi_contract.rs  interp_lma1_differential.rs  jit.rs  native_arrow_semantic_shape_disable.rs  production_arrow_semantic_jit.rs  production_arrow_semantic_route.rs  production_arrow_semantic_soak.rs  production_backend_contract.rs  production_backend_jit.rs  production_backend_pipeline.rs  production_pipeline.rs  roundtrip.rs  sidecar_decode_ffi.rs  toolchain.rs
crates/loom-fixtures/: Cargo.toml
crates/loom-fixtures/src/: corpus.rs  lib.rs  oracle.rs  vortex_reader.rs
crates/loom-fixtures/tests/: alp_roundtrip.rs  bitpack_roundtrip.rs  descriptor_roundtrip.rs  dict_fsst_roundtrip.rs  dict_roundtrip.rs  for_roundtrip.rs  fsst_roundtrip.rs  kernel_escape_roundtrip.rs  rle_roundtrip.rs  wave0_checks.rs
crates/loom-iceberg-binding/: Cargo.toml
crates/loom-iceberg-binding/src/: binding_contract.rs  lib.rs
crates/loom-iceberg-binding/tests/: binding_contract.rs  binding_handoff.rs  dependency_boundary.rs  mismatch_fail_closed.rs
crates/loom-lance-ingress/: Cargo.toml
crates/loom-lance-ingress/src/: lib.rs  sidecar_lance.rs  source_contract.rs
crates/loom-lance-ingress/tests/: dependency_boundary.rs  full_arrow_schema_compatibility.rs  legacy_readability.rs  phase42_source_schema_matrix.rs  source_ingress_contract.rs  source_ingress_handoff.rs
crates/loom-native-melior/: Cargo.toml
crates/loom-native-melior/src/: backend.rs  builder.rs  decode_dialect_manifest.rs  jit.rs  lib.rs  pipeline.rs
crates/loom-native-melior/tests/: builder.rs  decode_dialect_manifest.rs  jit.rs  native_arrow_semantic_shape_disable.rs  production_arrow_semantic_jit.rs  production_arrow_semantic_route.rs  production_arrow_semantic_soak.rs  production_backend_contract.rs  production_backend_jit.rs  production_backend_pipeline.rs  production_pipeline.rs  toolchain.rs
crates/loom-parquet-ingress/: Cargo.toml
crates/loom-parquet-ingress/src/: decode_ir_gen.rs  lib.rs  sidecar_parquet.rs  source_contract.rs
crates/loom-parquet-ingress/tests/: dependency_boundary.rs  full_arrow_schema_compatibility.rs  legacy_readability.rs  phase42_source_schema_matrix.rs  physical_bytes.rs  source_ingress_contract.rs  source_ingress_handoff.rs
crates/loom-sidecar-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/loom-sidecar-ffi/include/: loom_sidecar.h
crates/loom-sidecar-ffi/src/: ffi.rs  lib.rs
crates/loom-vortex-ingress/: Cargo.toml
crates/loom-vortex-ingress/src/: corpus.rs  lib.rs  (+2 more)
duckdb-ext/: CMakeLists.txt  loom_extension.cpp
ingress/loom-lance-ingress/: Cargo.toml
ingress/loom-parquet-ingress/: Cargo.toml
ingress/loom-self-ingress/: Cargo.toml
(+877 files in other folders)
