[workspace]
resolver = "2"
members = [
    "crates/loom-core",
    "crates/loom-ffi",
    "crates/loom-fixtures",
]

# Shared dependency versions — all downstream crates reference these via `.workspace = true`.
# Pinned to exact versions from STACK.md to prevent version skew (PITFALLS P9).
[workspace.dependencies]
# Arrow family — must be a single version across the entire workspace (CORE-01).
# All four sub-crates pinned to =58.3.0 so Cargo resolver 2 cannot select any
# other minor or patch. Because every crate in this workspace inherits via
# `.workspace = true`, the lockfile will contain only one instance of each
# arrow-* crate — verified by `cargo tree -d | grep arrow` returning zero lines.
arrow        = { version = "=58.3.0", features = ["ffi"] }
arrow-array  = { version = "=58.3.0" }
arrow-schema = { version = "=58.3.0" }
arrow-data   = { version = "=58.3.0" }

# Vortex family — 0.74.0 pinned; only loom-fixtures may use these (D-02).
# Note: vortex-dict was merged into vortex-array in the 0.7x series;
# dictionary encoding is accessed via vortex-array at 0.74.0.
# STACK.md listed vortex-dict =0.74.0 but that version does not exist on crates.io
# (latest published is 0.54.0 from the 0.5x era). Auto-fixed: use vortex-array
# for dict encoding at 0.74.0 (deviation Rule 1).
vortex-array     = { version = "=0.74.0" }
vortex-fastlanes = { version = "=0.74.0" }
vortex-fsst      = { version = "=0.74.0" }

# Build tooling — used in loom-ffi's build.rs in Plan 02.
cbindgen = { version = "=0.29.3" }

[profile.release]
# Required before any extern "C" surface is added (Plan 02).
# Unwinding past an FFI boundary is undefined behavior; aborting is the correct
# mitigation. catch_unwind wrappers are added in Plan 02 (CORE-02, PITFALLS P3, T-01-03).
panic = "abort"
