[workspace]
resolver = "2"
members = [
    "crates/loom-core",
    "crates/loom-ffi",
    "crates/loom-fixtures",
    "crates/loom-cli",
    "ingress/loom-vortex-ingress",
    "ingress/loom-source-ingress",
    "ingress/loom-lance-ingress",
    "ingress/loom-parquet-ingress",
    "contrib/loom-iceberg-binding",
    "crates/loom-native-melior",
    "crates/loom-solver-smt",
]

# Shared dependency versions — all downstream crates reference these via `.workspace = true`.
# Pinned to exact versions from STACK.md to prevent version skew (PITFALLS P9).
[workspace.dependencies]
# Arrow family — must be a single version across the entire workspace (CORE-01).
# All four sub-crates pinned to =58.3.0 so Cargo resolver 2 cannot select any
# other minor or patch. Because every crate in this workspace inherits via
# `.workspace = true`, the lockfile will contain only one instance of each
# arrow-* crate — verified by `cargo tree -d | grep arrow` returning zero lines.
arrow        = { version = "=58.3.0", features = ["ffi"] }
arrow-array  = { version = "=58.3.0" }
arrow-buffer = { version = "=58.3.0" }
arrow-schema = { version = "=58.3.0" }
arrow-data   = { version = "=58.3.0" }
arrow-ipc    = { version = "=58.3.0" }

fsst = { package = "fsst-rs", version = "=0.5.11" }
ron = { version = "=0.10.1" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.150" }

# Vortex family — 0.74.0 pinned; only loom-fixtures may use these (D-02).
# Note: vortex-dict was merged into vortex-array in the 0.7x series;
# dictionary encoding is accessed via vortex-array at 0.74.0.
# STACK.md listed vortex-dict =0.74.0 but that version does not exist on crates.io
# (latest published is 0.54.0 from the 0.5x era). Auto-fixed: use vortex-array
# for dict encoding at 0.74.0 (deviation Rule 1).
vortex-array     = { version = "=0.74.0" }
vortex-fastlanes = { version = "=0.74.0" }
vortex-fsst      = { version = "=0.74.0" }

# Source adapter family — Phase 27 keeps these SDKs isolated to adapter crates.
lance = { version = "=7.0.0", default-features = false }
parquet = { version = "=58.3.0", default-features = false, features = ["arrow"] }
futures = { version = "=0.3.32" }
tokio = { version = "=1.52.3", default-features = false, features = ["rt", "macros"] }
tempfile = { version = "=3.27.0" }

# Build tooling — used in loom-ffi's build.rs in Plan 02.
cbindgen = { version = "=0.29.3" }

[profile.release]
# Panic strategy for the FFI boundary (CORE-02, revised — see 01-REVIEW.md CR-01).
#
# Unwinding *past* an `extern "C"` frame is undefined behavior. The mitigation
# is a mandatory `std::panic::catch_unwind` wrapper at every `extern "C"` entry
# point (DUCK-04, see crates/loom-ffi/src/ffi.rs): it catches the panic BEFORE
# it reaches the FFI frame and converts it to an error code, so no unwind ever
# crosses the boundary.
#
# For `catch_unwind` to catch anything, unwinding must be ENABLED. With
# `panic = "abort"` the runtime aborts immediately and `catch_unwind` is a
# no-op — which silently defeats DUCK-04 (a decoder panic would kill the
# in-process DuckDB host instead of returning an error code). So we use
# `panic = "unwind"` and rely on the boundary catch for soundness. This is the
# Rust-RFC-2945 pattern for FFI panic safety.
panic = "unwind"
