[package]
name = "loom-cli"
version = "0.1.0"
edition = "2021"
description = "Reviewer CLI for inspecting and decoding Loom payloads — sidecar-only mode (Phase 101)"

[[bin]]
name = "loom"
path = "src/main.rs"

[dependencies]
loom-ir-core = { path = "../../crates/loom-ir-core" }
loom-parquet-ingress = { path = "../../ingress/loom-parquet-ingress" }
