[package]
name = "loom-cli"
version = "0.1.0"
edition = "2021"
description = "Reviewer CLI for inspecting and decoding Loom MVP0 payloads"

[[bin]]
name = "loom"
path = "src/main.rs"

[features]
default = ["full"]
full = ["dep:loom-core", "dep:arrow", "dep:arrow-data", "dep:arrow-schema", "dep:loom-vortex-ingress"]

[dependencies]
loom-ir-core = { path = "../loom-ir-core" }
loom-parquet-ingress = { path = "../../ingress/loom-parquet-ingress" }
loom-core = { path = "../loom-core", optional = true }
arrow = { workspace = true, optional = true }
arrow-data = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
loom-vortex-ingress = { path = "../../ingress/loom-vortex-ingress", optional = true }
