[package]
name = "loom-common"
version = "0.1.0"
edition = "2021"
description = "Loom production-core types, codecs, lowering, and runtime ABI"

[dependencies]
loom-ir-core  = { path = "../loom-ir-core" }
arrow         = { workspace = true }
arrow-array   = { workspace = true }
arrow-buffer  = { workspace = true }
arrow-schema  = { workspace = true }
arrow-data    = { workspace = true }
arrow-ipc     = { workspace = true }
fsst          = { workspace = true }
ron           = { workspace = true }
serde         = { workspace = true }
fnv           = { workspace = true }
