[package]
name = "loom-core"
version = "0.1.0"
edition = "2021"
description = "Loom core re-export shim — delegates to loom-ir-core and loom-container"

[dependencies]
loom-ir-core   = { path = "../loom-ir-core" }
loom-common    = { path = "../loom-common" }
loom-container = { path = "../loom-container" }
# Re-export these for downstream crates that use them directly:
arrow          = { workspace = true }
arrow-array    = { workspace = true }
arrow-buffer   = { workspace = true }
arrow-schema   = { workspace = true }
arrow-data     = { workspace = true }
arrow-ipc      = { workspace = true }
fsst           = { workspace = true }
ron            = { workspace = true }
serde          = { workspace = true }
fnv            = { workspace = true }
