[package]
name = "loom-ffi"
version = "0.1.0"
edition = "2021"
description = "Loom sidecar FFI staticlib — production-core, Arrow materialization, melior/LLVM/JIT backend, and sidecar C ABI"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
loom-ir-core = { path = "../loom-ir-core" }
loom-parquet-ingress = { path = "../loom-parquet-ingress" }
arrow         = { workspace = true }
arrow-array   = { workspace = true }
arrow-buffer  = { workspace = true }
arrow-schema  = { workspace = true }
arrow-data    = { workspace = true }
arrow-ipc     = { workspace = true }
parquet       = { workspace = true }
fsst          = { workspace = true }
ron           = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
fnv           = { workspace = true }
melior        = "=0.27.0"

[build-dependencies]
cbindgen = { workspace = true }