[package]
name = "loom-ffi"
version = "0.1.0"
edition = "2021"
description = "Loom sidecar FFI staticlib — production-core, Arrow materialization, melior/LLVM/JIT backend, and sidecar C ABI"

[lib]
crate-type = ["staticlib", "rlib"]

[features]
# `jit` pulls in melior/LLVM (the offline JIT verification backend). On by
# default so the full test suite exercises the JIT differential checks. The
# DuckDB sidecar extension builds with `--no-default-features` so the staticlib
# it links carries no LLVM symbols (the extension only needs the interp decode
# path). See contrib/duckdb-ext/CMakeLists.txt.
default = ["jit"]
jit = ["dep:melior"]

[dependencies]
loom-ir-core = { path = "../loom-ir-core" }
loom-parquet-ingress = { path = "../loom-parquet-ingress" }
arrow         = { workspace = true }
arrow-array   = { workspace = true }
arrow-buffer  = { workspace = true }
arrow-schema  = { workspace = true }
arrow-data    = { workspace = true }
arrow-ipc     = { workspace = true }
parquet       = { workspace = true }
fsst          = { workspace = true }
ron           = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
fnv           = { workspace = true }
melior        = { version = "=0.27.0", optional = true }

[build-dependencies]
cbindgen = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }